# PP_3-registrace

./: main.py  pyproject.toml
models/: model.py
modules/: connection.py  service.py
